srcs/InfluxDB/influxdb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  clusterIP: 10.96.101.151
  ports:
    - port: 8086
  selector:
    g_base: influx
